# shelldeck

./: .gitignore  AGENTS.md  LICENSE  README.md  components.json  electron-builder.yml  eslint.config.mjs  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs  pty.rs  store.rs  system_monitor.rs
src/components/settings/: NotificationsSettings.tsx  Settings.tsx  SettingsSidebar.tsx
src/components/sidebar/: ProjectList.tsx  ResizeHandle.tsx  Sidebar.tsx  TerminalList.tsx  WorkspaceList.tsx
src/components/statusbar/: StatusBar.tsx
src/components/ui/: context-menu.tsx  switch.tsx
src/components/workspace/: IdleScreen.tsx  PaneResizeHandle.tsx  SearchBar.tsx  SplitPaneContainer.tsx  TerminalHeader.tsx  TerminalView.tsx  Workspace.tsx
src/context/: settings-context.tsx  terminal-context.tsx  terminal-manager.tsx
src/hooks/: use-auto-update.ts  use-drag-reorder.ts  use-inline-rename.ts  use-keyboard-shortcuts.ts  use-terminal.ts
src/lib/: api.ts  layout.ts
src/main/: index.ts  pty-manager.ts  store.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.css  index.html
src/renderer/components/sidebar/: ProjectList.tsx  Sidebar.tsx  (+1 more)
src/renderer/context/: terminal-context.tsx
src/renderer/hooks/: use-system-stats.ts  use-terminal.ts
src/renderer/lib/: api.ts
src/shared/: types.ts
(+5 files in other folders)
