[package]
name = "shelldeck"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
portable-pty = "0.9"
tokio = { version = "1", features = ["sync", "rt"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = "1"
serde_json = "1"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
